# kedro

./: pyproject.toml
kedro/framework/hooks/: manager.py
kedro/framework/session/: session.py
kedro/io/: partitioned_data_set.py
tests/framework/cli/: test_cli_hooks.py
tests/framework/session/: test_session.py  test_session_hook_manager.py  test_store.py
tests/io/: test_partitioned_dataset.py
